roles/nat_fed/files/debian.rules.v4
*nat
:PREROUTING ACCEPT [13:1945]
:INPUT ACCEPT [13:1945]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i eth0 -p tcp --dport 60002 -j DNAT --to 10.4.1.2:22
-A PREROUTING -i eth0 -p tcp --dport 60003 -j DNAT --to 10.4.1.3:22
-A PREROUTING -i eth0 -p tcp --dport 60004 -j DNAT --to 10.4.1.4:22
-A PREROUTING -i eth0 -p tcp --dport 60005 -j DNAT --to 10.4.1.5:22
-A PREROUTING -i eth0 -p tcp --dport 60006 -j DNAT --to 10.4.1.6:22
-A PREROUTING -i eth0 -p tcp --dport 60007 -j DNAT --to 10.4.1.7:22
-A PREROUTING -i eth0 -p tcp --dport 60008 -j DNAT --to 10.4.1.8:22
-A PREROUTING -i eth0 -p tcp --dport 60009 -j DNAT --to 10.4.1.9:22
-A PREROUTING -i eth0 -p tcp --dport 60010 -j DNAT --to 10.4.1.10:22
-A PREROUTING -i eth0 -p tcp --dport 60011 -j DNAT --to 10.4.1.11:22
-A PREROUTING -i eth0 -p tcp --dport 60012 -j DNAT --to 10.4.1.12:22
-A PREROUTING -i eth0 -p tcp --dport 60013 -j DNAT --to 10.4.1.13:22
-A PREROUTING -i eth0 -p tcp --dport 60014 -j DNAT --to 10.4.1.14:22
-A PREROUTING -i eth0 -p tcp --dport 60015 -j DNAT --to 10.4.1.15:22
-A PREROUTING -i eth0 -p tcp --dport 60016 -j DNAT --to 10.4.1.16:22
-A PREROUTING -i eth0 -p tcp --dport 60017 -j DNAT --to 10.4.1.17:22
-A PREROUTING -i eth0 -p tcp --dport 60018 -j DNAT --to 10.4.1.18:22
-A PREROUTING -i eth0 -p tcp --dport 60019 -j DNAT --to 10.4.1.19:22
-A PREROUTING -i eth0 -p tcp --dport 60020 -j DNAT --to 10.4.1.20:22
-A PREROUTING -i eth0 -p tcp --dport 60021 -j DNAT --to 10.4.1.21:22
-A PREROUTING -i eth0 -p tcp --dport 60022 -j DNAT --to 10.4.1.22:22
-A PREROUTING -i eth0 -p tcp --dport 60023 -j DNAT --to 10.4.1.23:22
-A PREROUTING -i eth0 -p tcp --dport 60024 -j DNAT --to 10.4.1.24:22
-A PREROUTING -i eth0 -p tcp --dport 60025 -j DNAT --to 10.4.1.25:22
-A PREROUTING -i eth0 -p tcp --dport 60026 -j DNAT --to 10.4.1.26:22
-A PREROUTING -i eth0 -p tcp --dport 60027 -j DNAT --to 10.4.1.27:22
-A PREROUTING -i eth0 -p tcp --dport 60028 -j DNAT --to 10.4.1.28:22
-A PREROUTING -i eth0 -p tcp --dport 60029 -j DNAT --to 10.4.1.29:22
-A PREROUTING -i eth0 -p tcp --dport 60030 -j DNAT --to 10.4.1.30:22
-A PREROUTING -i eth0 -p tcp --dport 60031 -j DNAT --to 10.4.1.31:22
-A PREROUTING -i eth0 -p tcp --dport 60032 -j DNAT --to 10.4.1.32:22
-A PREROUTING -i eth0 -p tcp --dport 60033 -j DNAT --to 10.4.1.33:22
-A PREROUTING -i eth0 -p tcp --dport 60034 -j DNAT --to 10.4.1.34:22
-A PREROUTING -i eth0 -p tcp --dport 60035 -j DNAT --to 10.4.1.35:22
-A PREROUTING -i eth0 -p tcp --dport 60036 -j DNAT --to 10.4.1.36:22
-A PREROUTING -i eth0 -p tcp --dport 60037 -j DNAT --to 10.4.1.37:22
-A PREROUTING -i eth0 -p tcp --dport 60038 -j DNAT --to 10.4.1.38:22
-A PREROUTING -i eth0 -p tcp --dport 60039 -j DNAT --to 10.4.1.39:22
-A PREROUTING -i eth0 -p tcp --dport 60040 -j DNAT --to 10.4.1.40:22
-A PREROUTING -i eth0 -p tcp --dport 60041 -j DNAT --to 10.4.1.41:22
-A PREROUTING -i eth0 -p tcp --dport 60042 -j DNAT --to 10.4.1.42:22
-A PREROUTING -i eth0 -p tcp --dport 60043 -j DNAT --to 10.4.1.43:22
-A PREROUTING -i eth0 -p tcp --dport 60044 -j DNAT --to 10.4.1.44:22
-A PREROUTING -i eth0 -p tcp --dport 60045 -j DNAT --to 10.4.1.45:22
-A PREROUTING -i eth0 -p tcp --dport 60046 -j DNAT --to 10.4.1.46:22
-A PREROUTING -i eth0 -p tcp --dport 60047 -j DNAT --to 10.4.1.47:22
-A PREROUTING -i eth0 -p tcp --dport 60048 -j DNAT --to 10.4.1.48:22
-A PREROUTING -i eth0 -p tcp --dport 60049 -j DNAT --to 10.4.1.49:22
-A PREROUTING -i eth0 -p tcp --dport 60050 -j DNAT --to 10.4.1.50:22
-A PREROUTING -i eth0 -p tcp --dport 60051 -j DNAT --to 10.4.1.51:22
-A PREROUTING -i eth0 -p tcp --dport 60052 -j DNAT --to 10.4.1.52:22
-A PREROUTING -i eth0 -p tcp --dport 60053 -j DNAT --to 10.4.1.53:22
-A PREROUTING -i eth0 -p tcp --dport 60054 -j DNAT --to 10.4.1.54:22
-A PREROUTING -i eth0 -p tcp --dport 60055 -j DNAT --to 10.4.1.55:22
-A PREROUTING -i eth0 -p tcp --dport 60056 -j DNAT --to 10.4.1.56:22
-A PREROUTING -i eth0 -p tcp --dport 60057 -j DNAT --to 10.4.1.57:22
-A PREROUTING -i eth0 -p tcp --dport 60058 -j DNAT --to 10.4.1.58:22
-A PREROUTING -i eth0 -p tcp --dport 60059 -j DNAT --to 10.4.1.59:22
-A PREROUTING -i eth0 -p tcp --dport 60060 -j DNAT --to 10.4.1.60:22
-A PREROUTING -i eth0 -p tcp --dport 60061 -j DNAT --to 10.4.1.61:22
-A PREROUTING -i eth0 -p tcp --dport 60062 -j DNAT --to 10.4.1.62:22
-A PREROUTING -i eth0 -p tcp --dport 60063 -j DNAT --to 10.4.1.63:22
-A PREROUTING -i eth0 -p tcp --dport 60064 -j DNAT --to 10.4.1.64:22
-A PREROUTING -i eth0 -p tcp --dport 60065 -j DNAT --to 10.4.1.65:22
-A PREROUTING -i eth0 -p tcp --dport 60066 -j DNAT --to 10.4.1.66:22
-A PREROUTING -i eth0 -p tcp --dport 60067 -j DNAT --to 10.4.1.67:22
-A PREROUTING -i eth0 -p tcp --dport 60068 -j DNAT --to 10.4.1.68:22
-A PREROUTING -i eth0 -p tcp --dport 60069 -j DNAT --to 10.4.1.69:22
-A PREROUTING -i eth0 -p tcp --dport 60070 -j DNAT --to 10.4.1.70:22
-A PREROUTING -i eth0 -p tcp --dport 60071 -j DNAT --to 10.4.1.71:22
-A PREROUTING -i eth0 -p tcp --dport 60072 -j DNAT --to 10.4.1.72:22
-A PREROUTING -i eth0 -p tcp --dport 60073 -j DNAT --to 10.4.1.73:22
-A PREROUTING -i eth0 -p tcp --dport 60074 -j DNAT --to 10.4.1.74:22
-A PREROUTING -i eth0 -p tcp --dport 60075 -j DNAT --to 10.4.1.75:22
-A PREROUTING -i eth0 -p tcp --dport 60076 -j DNAT --to 10.4.1.76:22
-A PREROUTING -i eth0 -p tcp --dport 60077 -j DNAT --to 10.4.1.77:22
-A PREROUTING -i eth0 -p tcp --dport 60078 -j DNAT --to 10.4.1.78:22
-A PREROUTING -i eth0 -p tcp --dport 60079 -j DNAT --to 10.4.1.79:22
-A PREROUTING -i eth0 -p tcp --dport 60080 -j DNAT --to 10.4.1.80:22
-A PREROUTING -i eth0 -p tcp --dport 60081 -j DNAT --to 10.4.1.81:22
-A PREROUTING -i eth0 -p tcp --dport 60082 -j DNAT --to 10.4.1.82:22
-A PREROUTING -i eth0 -p tcp --dport 60083 -j DNAT --to 10.4.1.83:22
-A PREROUTING -i eth0 -p tcp --dport 60084 -j DNAT --to 10.4.1.84:22
-A PREROUTING -i eth0 -p tcp --dport 60085 -j DNAT --to 10.4.1.85:22
-A PREROUTING -i eth0 -p tcp --dport 60086 -j DNAT --to 10.4.1.86:22
-A PREROUTING -i eth0 -p tcp --dport 60087 -j DNAT --to 10.4.1.87:22
-A PREROUTING -i eth0 -p tcp --dport 60088 -j DNAT --to 10.4.1.88:22
-A PREROUTING -i eth0 -p tcp --dport 60089 -j DNAT --to 10.4.1.89:22
-A PREROUTING -i eth0 -p tcp --dport 60090 -j DNAT --to 10.4.1.90:22
-A PREROUTING -i eth0 -p tcp --dport 60091 -j DNAT --to 10.4.1.91:22
-A PREROUTING -i eth0 -p tcp --dport 60092 -j DNAT --to 10.4.1.92:22
-A PREROUTING -i eth0 -p tcp --dport 60093 -j DNAT --to 10.4.1.93:22
-A PREROUTING -i eth0 -p tcp --dport 60094 -j DNAT --to 10.4.1.94:22
-A PREROUTING -i eth0 -p tcp --dport 60095 -j DNAT --to 10.4.1.95:22
-A PREROUTING -i eth0 -p tcp --dport 60096 -j DNAT --to 10.4.1.96:22
-A PREROUTING -i eth0 -p tcp --dport 60097 -j DNAT --to 10.4.1.97:22
-A PREROUTING -i eth0 -p tcp --dport 60098 -j DNAT --to 10.4.1.98:22
-A PREROUTING -i eth0 -p tcp --dport 60099 -j DNAT --to 10.4.1.99:22
-A PREROUTING -i eth0 -p tcp --dport 60100 -j DNAT --to 10.4.1.100:22
-A PREROUTING -i eth0 -p tcp --dport 60101 -j DNAT --to 10.4.1.101:22
-A PREROUTING -i eth0 -p tcp --dport 60102 -j DNAT --to 10.4.1.102:22
-A PREROUTING -i eth0 -p tcp --dport 60103 -j DNAT --to 10.4.1.103:22
-A PREROUTING -i eth0 -p tcp --dport 60104 -j DNAT --to 10.4.1.104:22
-A PREROUTING -i eth0 -p tcp --dport 60105 -j DNAT --to 10.4.1.105:22
-A PREROUTING -i eth0 -p tcp --dport 60106 -j DNAT --to 10.4.1.106:22
-A PREROUTING -i eth0 -p tcp --dport 60107 -j DNAT --to 10.4.1.107:22
-A PREROUTING -i eth0 -p tcp --dport 60108 -j DNAT --to 10.4.1.108:22
-A PREROUTING -i eth0 -p tcp --dport 60109 -j DNAT --to 10.4.1.109:22
-A PREROUTING -i eth0 -p tcp --dport 60110 -j DNAT --to 10.4.1.110:22
-A PREROUTING -i eth0 -p tcp --dport 60111 -j DNAT --to 10.4.1.111:22
-A PREROUTING -i eth0 -p tcp --dport 60112 -j DNAT --to 10.4.1.112:22
-A PREROUTING -i eth0 -p tcp --dport 60113 -j DNAT --to 10.4.1.113:22
-A PREROUTING -i eth0 -p tcp --dport 60114 -j DNAT --to 10.4.1.114:22
-A PREROUTING -i eth0 -p tcp --dport 60115 -j DNAT --to 10.4.1.115:22
-A PREROUTING -i eth0 -p tcp --dport 60116 -j DNAT --to 10.4.1.116:22
-A PREROUTING -i eth0 -p tcp --dport 60117 -j DNAT --to 10.4.1.117:22
-A PREROUTING -i eth0 -p tcp --dport 60118 -j DNAT --to 10.4.1.118:22
-A PREROUTING -i eth0 -p tcp --dport 60119 -j DNAT --to 10.4.1.119:22
-A PREROUTING -i eth0 -p tcp --dport 60120 -j DNAT --to 10.4.1.120:22
-A PREROUTING -i eth0 -p tcp --dport 60121 -j DNAT --to 10.4.1.121:22
-A PREROUTING -i eth0 -p tcp --dport 60122 -j DNAT --to 10.4.1.122:22
-A PREROUTING -i eth0 -p tcp --dport 60123 -j DNAT --to 10.4.1.123:22
-A PREROUTING -i eth0 -p tcp --dport 60124 -j DNAT --to 10.4.1.124:22
-A PREROUTING -i eth0 -p tcp --dport 60125 -j DNAT --to 10.4.1.125:22
-A PREROUTING -i eth0 -p tcp --dport 60126 -j DNAT --to 10.4.1.126:22
-A PREROUTING -i eth0 -p tcp --dport 60127 -j DNAT --to 10.4.1.127:22
-A PREROUTING -i eth0 -p tcp --dport 60128 -j DNAT --to 10.4.1.128:22
-A PREROUTING -i eth0 -p tcp --dport 60129 -j DNAT --to 10.4.1.129:22
-A PREROUTING -i eth0 -p tcp --dport 60130 -j DNAT --to 10.4.1.130:22
-A PREROUTING -i eth0 -p tcp --dport 60131 -j DNAT --to 10.4.1.131:22
-A PREROUTING -i eth0 -p tcp --dport 60132 -j DNAT --to 10.4.1.132:22
-A PREROUTING -i eth0 -p tcp --dport 60133 -j DNAT --to 10.4.1.133:22
-A PREROUTING -i eth0 -p tcp --dport 60134 -j DNAT --to 10.4.1.134:22
-A PREROUTING -i eth0 -p tcp --dport 60135 -j DNAT --to 10.4.1.135:22
-A PREROUTING -i eth0 -p tcp --dport 60136 -j DNAT --to 10.4.1.136:22
-A PREROUTING -i eth0 -p tcp --dport 60137 -j DNAT --to 10.4.1.137:22
-A PREROUTING -i eth0 -p tcp --dport 60138 -j DNAT --to 10.4.1.138:22
-A PREROUTING -i eth0 -p tcp --dport 60139 -j DNAT --to 10.4.1.139:22
-A PREROUTING -i eth0 -p tcp --dport 60140 -j DNAT --to 10.4.1.140:22
-A PREROUTING -i eth0 -p tcp --dport 60141 -j DNAT --to 10.4.1.141:22
-A PREROUTING -i eth0 -p tcp --dport 60142 -j DNAT --to 10.4.1.142:22
-A PREROUTING -i eth0 -p tcp --dport 60143 -j DNAT --to 10.4.1.143:22
-A PREROUTING -i eth0 -p tcp --dport 60144 -j DNAT --to 10.4.1.144:22
-A PREROUTING -i eth0 -p tcp --dport 60145 -j DNAT --to 10.4.1.145:22
-A PREROUTING -i eth0 -p tcp --dport 60146 -j DNAT --to 10.4.1.146:22
-A PREROUTING -i eth0 -p tcp --dport 60147 -j DNAT --to 10.4.1.147:22
-A PREROUTING -i eth0 -p tcp --dport 60148 -j DNAT --to 10.4.1.148:22
-A PREROUTING -i eth0 -p tcp --dport 60149 -j DNAT --to 10.4.1.149:22
-A PREROUTING -i eth0 -p tcp --dport 60150 -j DNAT --to 10.4.1.150:22
-A PREROUTING -i eth0 -p tcp --dport 60151 -j DNAT --to 10.4.1.151:22
-A PREROUTING -i eth0 -p tcp --dport 60152 -j DNAT --to 10.4.1.152:22
-A PREROUTING -i eth0 -p tcp --dport 60153 -j DNAT --to 10.4.1.153:22
-A PREROUTING -i eth0 -p tcp --dport 60154 -j DNAT --to 10.4.1.154:22
-A PREROUTING -i eth0 -p tcp --dport 60155 -j DNAT --to 10.4.1.155:22
-A PREROUTING -i eth0 -p tcp --dport 60156 -j DNAT --to 10.4.1.156:22
-A PREROUTING -i eth0 -p tcp --dport 60157 -j DNAT --to 10.4.1.157:22
-A PREROUTING -i eth0 -p tcp --dport 60158 -j DNAT --to 10.4.1.158:22
-A PREROUTING -i eth0 -p tcp --dport 60159 -j DNAT --to 10.4.1.159:22
-A PREROUTING -i eth0 -p tcp --dport 60160 -j DNAT --to 10.4.1.160:22
-A PREROUTING -i eth0 -p tcp --dport 60161 -j DNAT --to 10.4.1.161:22
-A PREROUTING -i eth0 -p tcp --dport 60162 -j DNAT --to 10.4.1.162:22
-A PREROUTING -i eth0 -p tcp --dport 60163 -j DNAT --to 10.4.1.163:22
-A PREROUTING -i eth0 -p tcp --dport 60164 -j DNAT --to 10.4.1.164:22
-A PREROUTING -i eth0 -p tcp --dport 60165 -j DNAT --to 10.4.1.165:22
-A PREROUTING -i eth0 -p tcp --dport 60166 -j DNAT --to 10.4.1.166:22
-A PREROUTING -i eth0 -p tcp --dport 60167 -j DNAT --to 10.4.1.167:22
-A PREROUTING -i eth0 -p tcp --dport 60168 -j DNAT --to 10.4.1.168:22
-A PREROUTING -i eth0 -p tcp --dport 60169 -j DNAT --to 10.4.1.169:22
-A PREROUTING -i eth0 -p tcp --dport 60170 -j DNAT --to 10.4.1.170:22
-A PREROUTING -i eth0 -p tcp --dport 60171 -j DNAT --to 10.4.1.171:22
-A PREROUTING -i eth0 -p tcp --dport 60172 -j DNAT --to 10.4.1.172:22
-A PREROUTING -i eth0 -p tcp --dport 60173 -j DNAT --to 10.4.1.173:22
-A PREROUTING -i eth0 -p tcp --dport 60174 -j DNAT --to 10.4.1.174:22
-A PREROUTING -i eth0 -p tcp --dport 60175 -j DNAT --to 10.4.1.175:22
-A PREROUTING -i eth0 -p tcp --dport 60176 -j DNAT --to 10.4.1.176:22
-A PREROUTING -i eth0 -p tcp --dport 60177 -j DNAT --to 10.4.1.177:22
-A PREROUTING -i eth0 -p tcp --dport 60178 -j DNAT --to 10.4.1.178:22
-A PREROUTING -i eth0 -p tcp --dport 60179 -j DNAT --to 10.4.1.179:22
-A PREROUTING -i eth0 -p tcp --dport 60180 -j DNAT --to 10.4.1.180:22
-A PREROUTING -i eth0 -p tcp --dport 60181 -j DNAT --to 10.4.1.181:22
-A PREROUTING -i eth0 -p tcp --dport 60182 -j DNAT --to 10.4.1.182:22
-A PREROUTING -i eth0 -p tcp --dport 60183 -j DNAT --to 10.4.1.183:22
-A PREROUTING -i eth0 -p tcp --dport 60184 -j DNAT --to 10.4.1.184:22
-A PREROUTING -i eth0 -p tcp --dport 60185 -j DNAT --to 10.4.1.185:22
-A PREROUTING -i eth0 -p tcp --dport 60186 -j DNAT --to 10.4.1.186:22
-A PREROUTING -i eth0 -p tcp --dport 60187 -j DNAT --to 10.4.1.187:22
-A PREROUTING -i eth0 -p tcp --dport 60188 -j DNAT --to 10.4.1.188:22
-A PREROUTING -i eth0 -p tcp --dport 60189 -j DNAT --to 10.4.1.189:22
-A PREROUTING -i eth0 -p tcp --dport 60190 -j DNAT --to 10.4.1.190:22
-A PREROUTING -i eth0 -p tcp --dport 60191 -j DNAT --to 10.4.1.191:22
-A PREROUTING -i eth0 -p tcp --dport 60192 -j DNAT --to 10.4.1.192:22
-A PREROUTING -i eth0 -p tcp --dport 60193 -j DNAT --to 10.4.1.193:22
-A PREROUTING -i eth0 -p tcp --dport 60194 -j DNAT --to 10.4.1.194:22
-A PREROUTING -i eth0 -p tcp --dport 60195 -j DNAT --to 10.4.1.195:22
-A PREROUTING -i eth0 -p tcp --dport 60196 -j DNAT --to 10.4.1.196:22
-A PREROUTING -i eth0 -p tcp --dport 60197 -j DNAT --to 10.4.1.197:22
-A PREROUTING -i eth0 -p tcp --dport 60198 -j DNAT --to 10.4.1.198:22
-A PREROUTING -i eth0 -p tcp --dport 60199 -j DNAT --to 10.4.1.199:22
-A PREROUTING -i eth0 -p tcp --dport 60200 -j DNAT --to 10.4.1.200:22
-A PREROUTING -i eth0 -p tcp --dport 60201 -j DNAT --to 10.4.1.201:22
-A PREROUTING -i eth0 -p tcp --dport 60202 -j DNAT --to 10.4.1.202:22
-A PREROUTING -i eth0 -p tcp --dport 60203 -j DNAT --to 10.4.1.203:22
-A PREROUTING -i eth0 -p tcp --dport 60204 -j DNAT --to 10.4.1.204:22
-A PREROUTING -i eth0 -p tcp --dport 60205 -j DNAT --to 10.4.1.205:22
-A PREROUTING -i eth0 -p tcp --dport 60206 -j DNAT --to 10.4.1.206:22
-A PREROUTING -i eth0 -p tcp --dport 60207 -j DNAT --to 10.4.1.207:22
-A PREROUTING -i eth0 -p tcp --dport 60208 -j DNAT --to 10.4.1.208:22
-A PREROUTING -i eth0 -p tcp --dport 60209 -j DNAT --to 10.4.1.209:22
-A PREROUTING -i eth0 -p tcp --dport 60210 -j DNAT --to 10.4.1.210:22
-A PREROUTING -i eth0 -p tcp --dport 60211 -j DNAT --to 10.4.1.211:22
-A PREROUTING -i eth0 -p tcp --dport 60212 -j DNAT --to 10.4.1.212:22
-A PREROUTING -i eth0 -p tcp --dport 60213 -j DNAT --to 10.4.1.213:22
-A PREROUTING -i eth0 -p tcp --dport 60214 -j DNAT --to 10.4.1.214:22
-A PREROUTING -i eth0 -p tcp --dport 60215 -j DNAT --to 10.4.1.215:22
-A PREROUTING -i eth0 -p tcp --dport 60216 -j DNAT --to 10.4.1.216:22
-A PREROUTING -i eth0 -p tcp --dport 60217 -j DNAT --to 10.4.1.217:22
-A PREROUTING -i eth0 -p tcp --dport 60218 -j DNAT --to 10.4.1.218:22
-A PREROUTING -i eth0 -p tcp --dport 60219 -j DNAT --to 10.4.1.219:22
-A PREROUTING -i eth0 -p tcp --dport 60220 -j DNAT --to 10.4.1.220:22
-A PREROUTING -i eth0 -p tcp --dport 60221 -j DNAT --to 10.4.1.221:22
-A PREROUTING -i eth0 -p tcp --dport 60222 -j DNAT --to 10.4.1.222:22
-A PREROUTING -i eth0 -p tcp --dport 60223 -j DNAT --to 10.4.1.223:22
-A PREROUTING -i eth0 -p tcp --dport 60224 -j DNAT --to 10.4.1.224:22
-A PREROUTING -i eth0 -p tcp --dport 60225 -j DNAT --to 10.4.1.225:22
-A PREROUTING -i eth0 -p tcp --dport 60226 -j DNAT --to 10.4.1.226:22
-A PREROUTING -i eth0 -p tcp --dport 60227 -j DNAT --to 10.4.1.227:22
-A PREROUTING -i eth0 -p tcp --dport 60228 -j DNAT --to 10.4.1.228:22
-A PREROUTING -i eth0 -p tcp --dport 60229 -j DNAT --to 10.4.1.229:22
-A PREROUTING -i eth0 -p tcp --dport 60230 -j DNAT --to 10.4.1.230:22
-A PREROUTING -i eth0 -p tcp --dport 60231 -j DNAT --to 10.4.1.231:22
-A PREROUTING -i eth0 -p tcp --dport 60232 -j DNAT --to 10.4.1.232:22
-A PREROUTING -i eth0 -p tcp --dport 60233 -j DNAT --to 10.4.1.233:22
-A PREROUTING -i eth0 -p tcp --dport 60234 -j DNAT --to 10.4.1.234:22
-A PREROUTING -i eth0 -p tcp --dport 60235 -j DNAT --to 10.4.1.235:22
-A PREROUTING -i eth0 -p tcp --dport 60236 -j DNAT --to 10.4.1.236:22
-A PREROUTING -i eth0 -p tcp --dport 60237 -j DNAT --to 10.4.1.237:22
-A PREROUTING -i eth0 -p tcp --dport 60238 -j DNAT --to 10.4.1.238:22
-A PREROUTING -i eth0 -p tcp --dport 60239 -j DNAT --to 10.4.1.239:22
-A PREROUTING -i eth0 -p tcp --dport 60240 -j DNAT --to 10.4.1.240:22
-A PREROUTING -i eth0 -p tcp --dport 60241 -j DNAT --to 10.4.1.241:22
-A PREROUTING -i eth0 -p tcp --dport 60242 -j DNAT --to 10.4.1.242:22
-A PREROUTING -i eth0 -p tcp --dport 60243 -j DNAT --to 10.4.1.243:22
-A PREROUTING -i eth0 -p tcp --dport 60244 -j DNAT --to 10.4.1.244:22
-A PREROUTING -i eth0 -p tcp --dport 60245 -j DNAT --to 10.4.1.245:22
-A PREROUTING -i eth0 -p tcp --dport 60246 -j DNAT --to 10.4.1.246:22
-A PREROUTING -i eth0 -p tcp --dport 60247 -j DNAT --to 10.4.1.247:22
-A PREROUTING -i eth0 -p tcp --dport 60248 -j DNAT --to 10.4.1.248:22
-A PREROUTING -i eth0 -p tcp --dport 60249 -j DNAT --to 10.4.1.249:22
-A PREROUTING -i eth0 -p tcp --dport 60250 -j DNAT --to 10.4.1.250:22
-A PREROUTING -i eth0 -p tcp --dport 60251 -j DNAT --to 10.4.1.251:22
-A PREROUTING -i eth0 -p tcp --dport 60252 -j DNAT --to 10.4.1.252:22
-A PREROUTING -i eth0 -p tcp --dport 60253 -j DNAT --to 10.4.1.253:22
-A PREROUTING -i eth0 -p tcp --dport 60254 -j DNAT --to 10.4.1.254:22
-A POSTROUTING -o eth0 -j MASQUERADE
COMMIT
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A FORWARD -i eth1 -j ACCEPT
-A INPUT -j DROP
COMMIT
